--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.3.3
-install: bundle install
+install: cd 2015; bundle install
 cache: bundler
 
 script: cd 2015; bundle exec rspec
